--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
       "request": "launch",
       "preLaunchTask": "build",
       // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/test/ScheduledEvents.FunctionApp.Tests/bin/Debug/netcoreapp3.1/ScheduledEvents.FunctionApp.Tests.dll",
+      "program": "${workspaceFolder}/test/EventScheduler.FunctionApp.Tests/bin/Debug/netcoreapp3.1/EventScheduler.FunctionApp.Tests.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/test/ScheduledEvents.FunctionApp.Tests",
+      "cwd": "${workspaceFolder}/test/EventScheduler.FunctionApp.Tests",
       // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
       "console": "internalConsole",
       "stopAtEntry": false
