--- a/test/EventScheduler.FunctionApp.Tests/EventScheduler.FunctionApp.Tests.csproj
+++ b/test/EventScheduler.FunctionApp.Tests/EventScheduler.FunctionApp.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ScheduledEvents.FunctionApp\ScheduledEvents.FunctionApp.csproj" />
+    <ProjectReference Include="..\..\src\EventScheduler.FunctionApp\EventScheduler.FunctionApp.csproj" />
   </ItemGroup>
 
 </Project>
