--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,14 +34,14 @@ jobs:
     - name: Build Function app
       shell: pwsh
       run: |
-        pushd '${{ $GITHUB_WORKSPACE }}'
+        pushd '$GITHUB_WORKSPACE'
         dotnet build . -c Release -o ./output
         popd
 
     - name: Test Function app
       shell: pwsh
       run: |
-        pushd '${{ $GITHUB_WORKSPACE }}'
+        pushd '$GITHUB_WORKSPACE'
         dotnet test test/**/*.csproj
         popd
 
@@ -49,5 +49,5 @@ jobs:
       uses: Azure/functions-action@v1
       with:
         app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-        package: '${{ $GITHUB_WORKSPACE }}/output'
+        package: '$GITHUB_WORKSPACE/output'
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
