--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,7 +32,9 @@ jobs:
     - name: Restore NuGet packages
       shell: pwsh
       run: |
+        dir
         cd $GITHUB_WORKSPACE
+        dir
         dotnet restore .
 
     - name: Build Function app
