--- a/.github/workflows/dispatch.yaml
+++ b/.github/workflows/dispatch.yaml
@@ -5,7 +5,7 @@ on: repository_dispatch
 jobs:
   merge-pr:
     name: Merge PR
-    if: github.event.event_type == 'merge-pr'
+    # if: github.event.event_type == 'merge-pr'
 
     runs-on: ubuntu-latest
 
@@ -13,6 +13,10 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
+    - name: Check payload
+      shell: bash
+      run: |
+        echo ${{ ToJSON(github.event) }}
     - name: Merge PR
       uses: justinyoo/github-pr-merge-action@v0.8.0
       with:
