--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ 'windows-latest' ]
-        dotnet: [ '3.1.100' ]
+        dotnet: [ '3.1.x' ]
 
     runs-on: ${{ matrix.os }}
 
