--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,38 +13,29 @@ on:
 jobs:
   build_test_run:
     name: Build and test
-    strategy:
-      matrix:
-        os: [ 'windows-latest' ]
-        dotnet: [ '3.1.x' ]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: 'ubuntu-latest'
 
     steps:
     - name: Checkout the repository
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: ${{ matrix.dotnet }}
+        dotnet-version: '3.1.x'
 
     - name: Restore NuGet packages
-      shell: pwsh
+      shell: bash
       run: |
-        dir
         dotnet restore .
 
     - name: Build Function app
-      shell: pwsh
+      shell: bash
       run: |
-        dir
         dotnet build . -c Release -o ./output
-        dir
 
     - name: Test Function app
-      shell: pwsh
+      shell: bash
       run: |
-        dir
-        cd test/EventScheduler.FunctionApp.Tests
-        dotnet test .
+        dotnet test . -c Release
